# SAE302

./: MakeFile  Makefile  config.conf  data.json  ssh_keys  ssh_keys.pub
RT3SAE02/ClientAndroid/: Makefile
RT3SAE02/ClientAndroid/Gestionnairedabsence/: Makefile  settings.gradle.kts
RT3SAE02/ClientAndroid/Gestionnairedabsence/app/: build.gradle.kts
RT3SAE02/ClientAndroid/Gestionnairedabsence/app/src/main/cpp/: CMakeLists.txt  Client.c  Client.cpp  SSH_client.cpp  client_back.c  client_back.cpp  gestionnairedabsence.c  unSecured_server.c
RT3SAE02/ClientJava/: ClientJava.java  CommServ.java  Graphics.java  Main.java  Makefile  Presence.java
RT3SAE02/ClientServer/: Client  Client.c  Client.h  Makefile  SSH_client  SSH_client.c  SSH_server.c  client  client_back.c  client_back.h  engine.c  engine.h  server  server.c  server.h  ssh_host_rsa_key  ssh_host_rsa_key.pub  ssh_tunnel.c  ssh_tunnel.h  unSecured_server.c
RT3SAE02/ClientServerEnC_V1/: simpleClientSocket  simpleClientSocket.c  simpleServerSocket  simpleServerSocket.c
RT3SAE02/ClientServerEnC_V2/: Client  Client.c  ClientGraph.c  SSH_Client.c  SSH_server.c  client  engine.c  multipleServerSocket  multipleServerSocket.c  server  server.c  server.h  ssh-rsa  ssh-rsa.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub  ssh_keys  ssh_keys.pub  ssh_server  ssh_tunnel.c  unSecured_server.c
fiches/: RT1FA.csv  RT1FI.csv  RT2FA.csv  RT2FI.csv  RT2FI_presence_20250127_192927.csv
workspace/ClientTCP/: .project
workspace/ClientTCP/src/: Client.java
(+24 files in other folders)
